@@ -35,8 +35,15 @@ modeshelp={"scan":"Scan current directory tree for QA issues (default)",
 optionshelp={"--pretend":"Don't actually perform commit or fix steps; just show what would be done.",
 "--help":"Show this screen"
 }
-qacats=["digest.stray","digest.missing","ebuild.invalidname","ebuild.namenomatch","changelog.missing","ebuild.notadded","digest.notadded","ebuild.disjointed","digest.disjointed"]
+qacats=["digest.stray","digest.missing","ebuild.invalidname","ebuild.namenomatch","changelog.missing","ebuild.notadded","digest.notadded","ebuild.disjointed","digest.disjointed",
+"DEPEND.unsolvable","RDEPEND.unsolvable"]
 qawarnings=["changelog.missing","ebuild.notadded","digest.notadded"]
+missingvars=["KEYWORDS","LICENSE","DESCRIPTION","SLOT"]
+allvars=missingvars[:]
+allvars.extend(["DEPEND","RDEPEND"])
+for x in missingvars:
+	qacats.append(x+".missing")
+	qawarnings.append(x+".missing")
 qahelp={
 	"digest.stray":"Digest files that do not have a corresponding ebuild",
 	"digest.missing":"Digest files that are missing (ebuild exists, digest doesn't)",
@@ -46,7 +53,13 @@ qahelp={
 	"ebuild.disjointed":"Ebuilds not added to cvs when the matching digest has been added",
 	"digest.disjointed":"Digests not added to cvs when the matching ebuild has been added",
 	"digest.notadded":"Digests that exist but have not been added to cvs",
-	"ebuild.notadded":"Ebuilds that exist but have not been added to cvs"
+	"ebuild.notadded":"Ebuilds that exist but have not been added to cvs",
+	"KEYWORDS.missing":"Ebuilds that have a missing KEYWORDS variable",
+	"LICENSE.missing":"Ebuilds that have a missing LICENSE variable",
+	"DESCRIPTION.missing":"Ebuilds that have a missing DESCRIPTION variable",
+	"SLOT.missing":"Ebuilds that have a missing SLOT variable",
+	"DEPEND.unsolvable":"Ebuilds with DEPEND values that can't be matched",
+	"RDEPEND.unsolvable":"Ebuilds with RDEPEND values that can't be matched",
 }
 
 def err(txt):
@@ -60,8 +73,8 @@ def help():
 	print " Copyright 1999-2002 Gentoo Technologies, Inc."
 	print " Distributed under the terms of the GNU General Public License v2"
 	print
-	print bold("Usage:"),turquoise(exename),"[",green("option"),"] [",green("mode"),"]"
-	print bold("Modes:"),turquoise("scan (default)"),
+	print bold(" Usage:"),turquoise(exename),"[",green("option"),"] [",green("mode"),"]"
+	print bold(" Modes:"),turquoise("scan (default)"),
 	for x in modes[1:]:
 		print "|",turquoise(x),
 	print "\n"
@@ -157,6 +170,8 @@ elif repolevel==3:
 
 stats={}
 fails={}
+#objsadded records all object being added to cvs
+objsadded=[]
 for x in qacats:
 	stats[x]=0
 	fails[x]=[]
@@ -181,6 +196,7 @@ for x in scanlist:
 			splitl=l[1:].split("/")
 			if not len(splitl):
 				continue
+			objsadded.append(splitl[0])
 			if splitl[0][-7:]==".ebuild":
 				eadded.append(splitl[0][:-7])
 	except IOError:
@@ -194,6 +210,7 @@ for x in scanlist:
 			splitl=l[1:].split("/")
 			if not len(splitl):
 				continue
+			objsadded.append(splitl[0])
 			if splitl[0][:7]=="digest-":
 				dadded.append(splitl[0][7:])
 	except IOError:
@@ -248,37 +265,78 @@ for x in scanlist:
 			print pkgdir,myesplit[0]
 			stats["ebuild.namenomatch"]=stats["ebuild.namenomatch"]+1
 			fails["ebuild.namenomatch"].append(x+"/"+y+".ebuild")
+		myaux=portage.db["/"]["porttree"].dbapi.aux_get(catdir+"/"+y,allvars)	
+		for pos in range(0,len(missingvars)):
+			if myaux[pos]=="":
+				myqakey=missingvars[pos]+".missing"
+				stats[myqakey]=stats[myqakey]+1
+				fails[myqakey].append(x+"/"+y+".ebuild")
+		for mytype,mypos in [["DEPEND",len(missingvars)],["RDEPEND",len(missingvars)+1]]:
+			mykey=mytype+".unsolvable"
+			mydep=portage.db["/"]["porttree"].depcheck(myaux[mypos],mylookatuse=10)
+			if mydep[0]==1:
+				if mydep[1]!=[]:
+					#we have some unsolvable deps
+					
+					#remove ! deps, which always show up as unsatisfiable
+					d=0
+					while d<len(mydep[1]):
+						if mydep[1][d][0]=="!":
+							del mydep[1][d]
+						else:
+							d += 1
+					#if we emptied out our list, continue:
+					if not mydep[1]:
+						continue
+					stats[mykey]=stats[mykey]+1
+					fails[mykey].append(x+"/"+y+".ebuild: "+repr(mydep[1]))
+			else:
+					stats[mykey]=stats[mykey]+1
+					fails[mykey].append(x+"/"+y+".ebuild: "+repr(mydep[1]))
 
 print
+#dofail will be set to 1 if we have failed in at least one non-warning category
+dofail=0
+#dowarn will be set to 1 if we tripped any warnings
+dowarn=0
+#dofull will be set if we should print a "repoman full" informational message
+dofull=0
 for x in qacats:
-	if stats[x]==0:
-		print "  "+string.ljust(x,20),
+	if stats[x]:
+		dowarn=1
+		if x not in qawarnings:
+			dofail=1
 	else:
-		print "  "+bold(string.ljust(x,20)),
+		if mymode!="full":
+			continue
+	print "  "+string.ljust(x,20),
 	if stats[x]==0:
 		print green(`stats[x]`)
+		continue
 	elif x in qawarnings:
 		print yellow(`stats[x]`)
 	else:
 		print red(`stats[x]`)
-	if stats[x]==0:
-		continue
 	if mymode!="full":
 		if stats[x]<12:
 			for y in fails[x]:
-				print "   >"+y
+				print "   "+y
 		else:
-			print "   >("+`stats[x]`+" items; run in \"full\" mode for list.)"
+			dofull=1
 	else:
 		for y in fails[x]:
-			print "   >"+y
+			print "   "+y
 print
-if mymode=="commit":
-	dofail=0
-	for x in qacats:
-		if stats[x] and (x not in qawarnings):
-			dofail=1
-			print turquoise(`stats[x]`+" "+x+" failures")
+if mymode!="commit":
+	if dofull:
+		print bold("Note: type \"repoman full\" for a complete listing.")
+		print
+	if dowarn and not dofail:
+		print green("RepoMan sez:"),"\"You're only giving me a partial QA payment?\nI'll take it this time, but I'm not happy.\""
+	elif not dofail:
+		print green("RepoMan sez:"),"\"If everyone were like you, I'd be out of business!\""
+	print
+else:
 	if dofail:
 		print turquoise("Please fix these important QA issues first.")
 		print green("RepoMan sez:"),"\"Make your QA payment on time and you'll never see the likes of me.\"\n"
@@ -296,7 +354,12 @@ if mymode=="commit":
 		except KeyboardInterrupt: 
 			exithandler()
 		print
-		retval=os.system("/usr/bin/cvs -q commit -m'"+mycomment+"'")
+		#backslash any single quotes
+		mymsg=open("/tmp/.repoman.msg","w")
+		mymsg.write(mycomment)
+		mymsg.close()
+		retval=os.system("/usr/bin/cvs -q commit -F /tmp/.repoman.msg")
+		os.unlink("/tmp/.repoman.msg")
 		print
 		print "Cvs commit complete."
 		print green("RepoMan sez:"), "\"If everyone were like you, I'd be out of business!\"\n"
